fixed bugs on ielts nav bar

--- a/pricing-style.css
+++ b/pricing-style.css
@@ -5,8 +5,8 @@
 /* Create three columns of equal width */
 .columns {
   float: left;
-  width: 33.3%;
-  padding: 8px;
+  width: 25%;
+  padding: 10px;
 }
 
 /* Style the list */
@@ -17,6 +17,18 @@
   padding: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+.price .advanced {
+  width: 100px;
+  position: absolute;
+  top: 18px;
+  right: -68px;
+  transform: rotate(45deg);
+  z-index: 1;
+  font-size: 14px;
+  padding: 1px 0 3px 0;
+  background: #5fcf80;
+  color: #fff;
 }
 
 /* Add shadows on hover */
@@ -34,7 +46,7 @@
 /* List items */
 .price li {
   border-bottom: 1px solid #eee;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
 }
 
@@ -46,13 +58,17 @@
 
 /* The "Sign Up" button */
 .button {
-  background-color: #04aa6d;
-  border: none;
-  color: white;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 18px;
+  background: #5fcf80;
+  display: inline-block;
+  padding: 8px 35px;
+  border-radius: 50px;
+  color: #fff;
+  transition: none;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  transition: 0.3s;
 }
 
 /* Change the width of the three columns to 100%
